--- a/app/package.json
+++ b/app/package.json
@@ -17,7 +17,9 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "expo": "~44.0.0",
+    "expo-auth-session": "~3.5.0",
     "expo-font": "^10.0.5",
+    "expo-random": "~12.1.1",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.7",
     "react": "17.0.1",
