--- a/app/package.json
+++ b/app/package.json
@@ -21,14 +21,19 @@
     "expo": "~44.0.0",
     "expo-auth-session": "~3.5.0",
     "expo-font": "^10.0.5",
+    "expo-location": "~14.0.1",
     "expo-random": "~12.1.1",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-async-storage": "^0.0.1",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-maps": "0.29.4",
+    "react-native-maps-directions": "^1.8.0",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
