--- a/app/app.json
+++ b/app/app.json
@@ -3,7 +3,7 @@
     "name": "SafeFood",
     "slug": "SafeFood",
     "scheme": "safefood",
-    "version": "0.0.2",
+    "version": "0.0.4",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
@@ -14,16 +14,14 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "bundleIdentifier": "com.tcc.safefood",
-      "buildNumber": "0.0.2",
+      "buildNumber": "0.0.4",
       "supportsTablet": true
     },
     "android": {
-      "versionCode": 2,
+      "versionCode": 3,
       "package": "com.tcc.safefood",
       "permissions": [
         "com.google.android.c2dm.permission.RECEIVE",
@@ -34,15 +32,18 @@
         "com.htc.launcher.permission.READ_SETTINGS",
         "com.htc.launcher.permission.UPDATE_SHORTCUT",
         "com.sec.android.provider.badge.permission.READ",
-        "com.sec.android.provider.badge.permission.WRITE"
+        "com.sec.android.provider.badge.permission.WRITE",
+        "ACCESS_FINE_LOCATION",
+        "ACCESS_BACKGROUND_LOCATION",
+        "ACCESS_COARSE_LOCATION"
       ],
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#FFFFFF"
       }
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/icon.png"
     }
   }
 }
