--- a/app/app.json
+++ b/app/app.json
@@ -3,7 +3,7 @@
     "name": "SafeFood",
     "slug": "SafeFood",
     "scheme": "safefood",
-    "version": "0.0.6",
+    "version": "0.0.9",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
@@ -17,11 +17,11 @@
     "assetBundlePatterns": ["**/*"],
     "ios": {
       "bundleIdentifier": "com.tcc.safefood",
-      "buildNumber": "0.0.6",
+      "buildNumber": "0.0.9",
       "supportsTablet": true
     },
     "android": {
-      "versionCode": 6,
+      "versionCode": 9,
       "package": "com.tcc.safefood",
       "permissions": [
         "com.google.android.c2dm.permission.RECEIVE",
@@ -33,8 +33,10 @@
         "com.htc.launcher.permission.UPDATE_SHORTCUT",
         "com.sec.android.provider.badge.permission.READ",
         "com.sec.android.provider.badge.permission.WRITE",
+        "ACCESS_COARSE_LOCATION",
         "ACCESS_FINE_LOCATION",
-        "ACCESS_COARSE_LOCATION"
+        "ACCESS_NETWORK_STATE",
+        "FOREGROUND_SERVICE "
       ],
       "adaptiveIcon": {
         "foregroundImage": "./assets/icon.png",
