--- a/app/package.json
+++ b/app/package.json
@@ -34,10 +34,11 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-maps": "0.29.4",
     "react-native-maps-directions": "^1.8.0",
+    "react-native-qrcode-svg": "^6.1.2",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-svg": "12.1.1",
+    "react-native-svg": "^12.1.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
